--- a/ViewViewModels/Main/MainView.xaml
+++ b/ViewViewModels/Main/MainView.xaml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.Main.NewPage1"
-             Title="NewPage1">
-    <VerticalStackLayout>
+             x:Class="MyFirstMobileApp.ViewViewModels.Main.MainView"
+             Title="MainView">
+    <StackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+        <Label
+            Text="Hello!"
+            VerticalOptions="CenterAndExpand"
+            HorizontalOptions="FillAndExpand"/>
+    </StackLayout>
 </ContentPage>
