--- a/ViewViewModels/Main/MainView.xaml
+++ b/ViewViewModels/Main/MainView.xaml
@@ -3,14 +3,47 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.Main.MainView"
              Title="MainView">
-    <StackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-        <Label
-            Text="Hello!"
-            VerticalOptions="CenterAndExpand"
-            HorizontalOptions="FillAndExpand"/>
-    </StackLayout>
+    
+    <!-- Applying a "Style" to the buttons.
+         This will provide a space between the buttons. -->
+    <ContentPage.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Margin" Value="10" />
+        </Style>
+    </ContentPage.Resources>
+
+    <VerticalStackLayout>
+        <!-- Sets Margin Left, Top, Right, Bottom -->
+        <Grid Margin="25, 35, 20, 20">
+            <Grid.RowDefinitions>
+                <!-- Set Height to 50 DIPs (device-independent pixels) -->
+                <RowDefinition Height="75" />
+                <RowDefinition Height="75" />
+            </Grid.RowDefinitions>
+            
+            <Grid.ColumnDefinitions>
+                <!-- Set Column to * which will proportionately space out the columns -->
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            
+            <Button Grid.Row="0"
+                    Grid.Column="0"
+                    Text="Stack Layout" />
+            <Button Grid.Row="0"
+                    Grid.Column="1"
+                    Text="Button 0,1" />
+            <Button Grid.Row="1"
+                    Grid.Column="0"
+                    Text="Button 1,0" />
+            <Button Grid.Row="1"
+                    Grid.Column="1"
+                    Text="Button 1,1" />
+        </Grid>
+    </VerticalStackLayout>
+    
 </ContentPage>
+
+    
+    
+    
