--- a/ViewViewModels/Main/MainView.xaml
+++ b/ViewViewModels/Main/MainView.xaml
@@ -30,6 +30,15 @@
             <Button Grid.Row="0"
                     Grid.Column="0"
                     Text="{Binding TitleStackLayout}" />
+            <Button Grid.Row="0"
+                    Grid.Column="1"
+                    Text="" />
+            <Button Grid.Row="1"
+                    Grid.Column="0"
+                    Text="" />
+            <Button Grid.Row="1"
+                    Grid.Column="1"
+                    Text="" />
         </Grid>
     </VerticalStackLayout>
 
