--- a/ViewViewModels/StackLayoutContents/StackLayoutView.xaml
+++ b/ViewViewModels/StackLayoutContents/StackLayoutView.xaml
@@ -1,12 +1,52 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.StackLayoutContents.StackLayoutView"
-             Title="StackLayoutView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:Class="MyFirstMobileApp.ViewViewModels.Main.MainView"
+             Title="{Binding Title}">
+
+    <!-- Applying a "Style" to the buttons.
+         This will provide a space between the buttons. -->
+<ContentPage.Resources>
+    <Style TargetType="Button">
+        <Setter Property="Margin" Value="10" />
+    </Style>
+</ContentPage.Resources>
+
+<VerticalStackLayout>
+    <!-- Sets Margin Left, Top, Right, Bottom -->
+    <Grid Margin="25, 35, 20, 20">
+        <Grid.RowDefinitions>
+            <!-- Set Height to 50 DIPs (device-independent pixels) -->
+            <RowDefinition Height="75" />
+            <RowDefinition Height="75" />
+            <RowDefinition Height="75" />
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <!-- Set Column to * which will proportionately space out the columns -->
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Button Grid.Row="0"
+                Grid.Column="0"
+                Text="Stack Layout"
+                Command="{Binding OnLayoutsClicked}"
+                Grid.ColumnSpan="2"/>
+        <Button Grid.Row="1"
+                Grid.Column="0"
+                Text="Vertical Stack"
+                Command="{Binding OnLayoutsClicked}" />
+        <Button Grid.Row="1"
+                Grid.Column="1"
+                Text="Horizontal Stack"
+                Command="{Binding OnLayoutsClicked}" />
+        <Button Grid.Row="2"
+                Grid.Column="0"
+                Text="Absolute Layout"
+                Command="{Binding OnLayoutsClicked}" 
+                Grid.ColumnSpan="2" />
+    </Grid>
+</VerticalStackLayout>
+    
 </ContentPage>
