Fixed Infinite Loop with StackLayoutView

--- a/ViewViewModels/Main/MainView.xaml
+++ b/ViewViewModels/Main/MainView.xaml
@@ -30,7 +30,7 @@
 
             <Button Grid.Row="0"
                     Grid.Column="0"
-                    Text="{Binding TitleStackLayout}"
+                    Text="{Binding StackLayoutTitle}"
                     Command="{Binding OnLayoutsClicked}" />
             <Button Grid.Row="0"
                     Grid.Column="1"
