--- a/ViewViewModels/Layouts/InnerStackLayoutContents/InnerStackLayoutView.xaml
+++ b/ViewViewModels/Layouts/InnerStackLayoutContents/InnerStackLayoutView.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.InnerStackLayoutContents.InnerStackLayoutView"
-             Title="{Binding Title}">
+             x:Class="MyFirstMobileApp.ViewViewModels.Layouts.InnerStackLayoutContents.InnerStackLayoutView"
+             Title="{Binding InnerStackLayoutTitle}">
 
     <StackLayout>
 
