--- a/ViewViewModels/Layouts/StackLayoutContents/StackLayoutView.xaml
+++ b/ViewViewModels/Layouts/StackLayoutContents/StackLayoutView.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MyFirstMobileApp.ViewViewModels.StackLayoutContents.StackLayoutView"
+             x:Class="MyFirstMobileApp.ViewViewModels.Layouts.StackLayoutContents.StackLayoutView"
              Title="{Binding PageTitle}">
 
     <!-- Applying a "Style" to the buttons.
@@ -31,7 +31,8 @@
             <Button Grid.Row="0"
                     Grid.Column="0"
                     Text="{Binding StackTitle}"
-                    Grid.ColumnSpan="2" />
+                    Grid.ColumnSpan="2"
+                    Command="{Binding OnLayoutsClicked}" />
             <Button Grid.Row="1"
                     Grid.Column="0"
                     Text="{Binding VerticalTitle}" />
