--- a/ViewViewModels/Layouts/InnerStackLayoutContents/InnerStackLayoutView.xaml
+++ b/ViewViewModels/Layouts/InnerStackLayoutContents/InnerStackLayoutView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.Layouts.InnerStackLayoutContents.InnerStackLayoutView"
-             Title="{Binding InnerStackLayoutTitle}">
+             Title="{Binding InnerTitle}">
 
     <StackLayout>
 
@@ -36,3 +36,6 @@
     </StackLayout>
 
 </ContentPage>
+    
+    
+    
