--- a/ViewViewModels/Layouts/AbsoluteLayoutContents/AbsoluteLayoutView.xaml
+++ b/ViewViewModels/Layouts/AbsoluteLayoutContents/AbsoluteLayoutView.xaml
@@ -12,81 +12,92 @@
 
     <AbsoluteLayout>
 
-        <!-- Sets Margin Left, Top, Right, Bottom -->
-        <Grid Margin="25, 35, 20, 20">
-            <Grid.RowDefinitions>
-                <!-- Set Height to 50 DIPs (device-independent pixels) -->
-                <RowDefinition Height="75" />
-                <RowDefinition Height="75" />
-                <RowDefinition Height="75" />
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-                <!-- Set Column to * which will proportionately space out the columns -->
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
+        <Label       Text="Absolute!"
+                     AbsoluteLayout.LayoutBounds="0.5, 0.05, 100, 25"
+                     FontSize="20" />
             <Button  Text="01"
                      BackgroundColor="Red"
                      TextColor="Blue"
-                     AbsoluteLayout.LayoutBounds="0, 0, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     AbsoluteLayout.LayoutBounds="0.1, 0.1, 65, 45"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="02"
                      BackgroundColor="OldLace"
-                     TextColor="Gainsboro"
-                     AbsoluteLayout.LayoutBounds="0.5, 0, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     TextColor="Blue"
+                     Grid.Row="1"
+                     Grid.Column="1"
+                     AbsoluteLayout.LayoutBounds="0.2, 0.2, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="03"
                      BackgroundColor="AntiqueWhite"
-                     TextColor="Wheat"
-                     AbsoluteLayout.LayoutBounds="1, 0, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     TextColor="Purple"
+                     Grid.Row="1"
+                     Grid.Column="2"
+                     AbsoluteLayout.LayoutBounds="0.3, 0.3, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="04"
                      BackgroundColor="AliceBlue"
                      TextColor="Red"
-                     AbsoluteLayout.LayoutBounds="1.5, 0, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     Grid.Row="1"
+                     Grid.Column="3"
+                     AbsoluteLayout.LayoutBounds="0.1, 0.1, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="05"
                      BackgroundColor="Tan"
                      TextColor="Yellow"
-                     AbsoluteLayout.LayoutBounds="0, 0.5, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     Grid.Row="2"
+                     Grid.Column="0"
+                     AbsoluteLayout.LayoutBounds="1, 0, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="06"
                      BackgroundColor="AliceBlue"
-                     TextColor="OldLace"
-                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     TextColor="Black"
+                     Grid.Row="2"
+                     Grid.Column="1"
+                     AbsoluteLayout.LayoutBounds="2, 0.5, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="07"
                      BackgroundColor="PaleGoldenrod"
-                     TextColor="AliceBlue"
-                     AbsoluteLayout.LayoutBounds="1, 0.5, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     TextColor="Black"
+                     Grid.Row="2"
+                     Grid.Column="2"
+                     AbsoluteLayout.LayoutBounds="3, 1.0, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="08"
                      BackgroundColor="SaddleBrown"
                      TextColor="DarkBlue"
-                     AbsoluteLayout.LayoutBounds="1.5, 0.5, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     Grid.Row="2"
+                     Grid.Column="3"
+                     AbsoluteLayout.LayoutBounds="0, 1.5, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="09"
                      BackgroundColor="Firebrick"
                      TextColor="Honeydew"
-                     AbsoluteLayout.LayoutBounds="0, 1, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     Grid.Row="4"
+                     Grid.Column="0"
+                     AbsoluteLayout.LayoutBounds="1, 0, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="10"
                      BackgroundColor="Gainsboro"
-                     TextColor="NavajoWhite"
-                     AbsoluteLayout.LayoutBounds="0.5, 1, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
+                     TextColor="Orange"
+                     Grid.Row="4"
+                     Grid.Column="1"
+                     AbsoluteLayout.LayoutBounds="2, 0.5, 10, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
             <Button  Text="11"
                      BackgroundColor="Lavender"
-                     TextColor="Azure"
-                     AbsoluteLayout.LayoutBounds="1, 1, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
-            <Button  Text="12"
+                     TextColor="Salmon"
+                     Grid.Row="4"
+                     Grid.Column="2"
+                     AbsoluteLayout.LayoutBounds="3, 1.0, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
+        <Button  Text="12"
                      BackgroundColor="CadetBlue"
                      TextColor="Beige"
-                     AbsoluteLayout.LayoutBounds="1.5, 1, 100, 25"
-                     AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional" />
-        </Grid>
+                     Grid.Row="4"
+                     Grid.Column="3"
+                     AbsoluteLayout.LayoutBounds="3, 1.5, 100, 25"
+                     AbsoluteLayout.LayoutFlags="PositionProportional" />
+
     </AbsoluteLayout>
+    
 </ContentPage>
