--- a/ViewViewModels/Layouts/FlexLayoutContents/FlexLayoutView.xaml
+++ b/ViewViewModels/Layouts/FlexLayoutContents/FlexLayoutView.xaml
@@ -2,11 +2,34 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.Layouts.FlexLayoutContents.FlexLayoutView"
-             Title="FlexLayoutView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="{Binding FlexTitle}">
+
+    <FlexLayout Direction="Row" 
+                JustifyContent="SpaceAround" 
+                AlignItems="Center" 
+                BackgroundColor="White" >
+
+        <VerticalStackLayout>
+            <BoxView    Color="Red" 
+                        WidthRequest="50" 
+                        HeightRequest="50" />
+            <Label      Text="Red" />
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+            <BoxView    Color="Green" 
+                        WidthRequest="50" 
+                        HeightRequest="50"  />
+            <Label      Text="Green" />
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+            <BoxView    Color="Blue" 
+                        WidthRequest="50" 
+                        HeightRequest="50" />
+            <Label      Text="Blue" />
+        </VerticalStackLayout>
+
+    </FlexLayout>
+
 </ContentPage>
