Finished URIImages and Embedded, Need to work on TitleImages (fomat it correctly) and apply it to other pages.
Need to work on ActivityIndicator.

--- a/ViewViewModels/AppImages/Embedded/EmbeddedImageView.xaml
+++ b/ViewViewModels/AppImages/Embedded/EmbeddedImageView.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyFirstMobileApp.ViewViewModels.AppImages.Embedded.EmbeddedImageView"
-             Title="EmbeddedImageView">
+             Title="{Binding Title}">
     <VerticalStackLayout>
-        <Image Source="{Binding GetImageSource}" />
+        <Image Source="{Binding GetImageSource}"
+               Aspect="AspectFit" />
     </VerticalStackLayout>
-    
-    
     
 </ContentPage>
