--- a/ViewViewModels/AppImages/ImagesMenu/ImagesMenuView.xaml
+++ b/ViewViewModels/AppImages/ImagesMenu/ImagesMenuView.xaml
@@ -33,11 +33,12 @@
                     Command="{Binding OnURIImagesClicked}" />
             <Button Grid.Row="0"
                     Grid.Column="1"
-                    Text="{Binding EmbeddedImagesTitle}"
+                    Text="{Binding EmbeddedTitle}"
                     Command="{Binding OnEmbeddedImagesClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="0"
-                    Text="Button 1,0" />
+                    Text="{Binding ActivityIndicatorTitle}"
+                    Command="{Binding OnActivityIndicatorClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="1"
                     Text="Button 1,1" />
