--- a/ViewViewModels/AppImages/ImagesMenu/ImagesMenuView.xaml
+++ b/ViewViewModels/AppImages/ImagesMenu/ImagesMenuView.xaml
@@ -37,7 +37,7 @@
                     Command="{Binding OnEmbeddedImagesClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="0"
-                    Text="{Binding ActivityIndicatorTitle}"
+                    Text="{Binding ActivityTitle}"
                     Command="{Binding OnActivityIndicatorClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="1"
