--- a/ViewViewModels/CollectionsContents/SWMoviesCollection/StarWarsMoviesView.xaml
+++ b/ViewViewModels/CollectionsContents/SWMoviesCollection/StarWarsMoviesView.xaml
@@ -3,13 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MyFirstMobileApp.Models.Entities"
              x:Class="MyFirstMobileApp.ViewViewModels.CollectionsContents.SWMoviesCollection.StarWarsMoviesView"
-             Title="StarWarsMoviesView">
+             Title="{Binding Title}">
     
     <StackLayout>
         
         <!-- View Header Label -->
         <StackLayout HorizontalOptions="CenterAndExpand">
-            <Label Text="Movies" FontSize="50" FontAttributes="Bold,Italic" TextColor="CadetBlue" WidthRequest="170" />
+            <Label Text="Movies" 
+                   FontSize="50" 
+                   FontAttributes="Bold,Italic" 
+                   TextColor="Black" 
+                   BackgroundColor="Red" 
+                   WidthRequest="500" 
+                   HorizontalTextAlignment="Center" />
         </StackLayout>
         
         <!-- View Separator Line -->
@@ -28,7 +34,22 @@
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="local:StarWarsMovies">
                     <Grid Padding="2">
-                        
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                         
+                        <!-- View: Display name of the movie -->
+                        <StackLayout Orientation="Horizontal">
+                            <StackLayout>
+                                <!-- ViewModel: Binding of the NameOfMovie property in the ViewModel which is the property defined in the SWMovies model -->
+                                <Label Text="{Binding NameOfMovie}"
+                                       FontAttributes="Bold"
+                                       HorizontalTextAlignment="Center"
+                                       BackgroundColor="Black"
+                                       TextColor="Red"
+                                       FontSize="Medium" />
+                            </StackLayout>
+                        </StackLayout>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
