Finished Collections w/ Images, Moved images out of StarWarsCharacters Folder (not showing picture while in folder for some reason), deleted Folder.

--- a/ViewViewModels/CollectionsContents/CollectionImageContents/CollectionImageView.xaml
+++ b/ViewViewModels/CollectionsContents/CollectionImageContents/CollectionImageView.xaml
@@ -14,7 +14,7 @@
     </ContentPage.Resources>
 
     <CollectionView x:Name="ItemsListView"
-                    ItemsSource="{Binding SWCharactersCollection}"
+                    ItemsSource="{Binding SWCollection}"
                     SelectionMode="None"
                     ItemsLayout="VerticalList">
 
