--- a/ViewViewModels/CollectionsContents/CollectionsMenuView.xaml
+++ b/ViewViewModels/CollectionsContents/CollectionsMenuView.xaml
@@ -34,7 +34,8 @@
                     Command="{Binding OnMoviesClicked}" />
             <Button Grid.Row="0"
                     Grid.Column="1"
-                    Text="Button" />
+                    Text="{Binding ImagesTitle}"
+                    Command="{Binding OnCollectionImageClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="0"
                     Text="Button" />
