Finished code for CollectionsButtonsView + ViewModel. For some reason, Add is working while Update and Delete are not.

--- a/ViewViewModels/CollectionsContents/CollectionsMenuView.xaml
+++ b/ViewViewModels/CollectionsContents/CollectionsMenuView.xaml
@@ -30,7 +30,7 @@
 
             <Button Grid.Row="0"
                     Grid.Column="0"
-                    Text="{Binding SWMoviesTitle}"
+                    Text="{Binding MoviesTitle}"
                     Command="{Binding OnMoviesClicked}" />
             <Button Grid.Row="0"
                     Grid.Column="1"
@@ -38,7 +38,8 @@
                     Command="{Binding OnCollectionImageClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="0"
-                    Text="Button" />
+                    Text="{Binding ButtonsTitle}"
+                    Command="{Binding OnButtonsClicked}"/>
             <Button Grid.Row="1"
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
